--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "test",
+  "name": "react-employee-directory",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sjohn214.github.io/Remixing-with-React/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
