--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-employee-directory",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sjohn214.github.io/Remixing-with-React/",
+  "homepage": "https://sjohn214.github.io/React-Employee-Directory/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
